sonda-server/src/routes/snapshots/sonda_server__routes__scenarios__tests__detailed_stats_response_state_pending.snap
---
source: sonda-server/src/routes/scenarios.rs
assertion_line: 4189
expression: resp
---
{
  "total_events": 100,
  "current_rate": 10.0,
  "target_rate": 10.0,
  "bytes_emitted": 4096,
  "errors": 0,
  "uptime_secs": "[uptime_secs]",
  "state": "pending",
  "in_gap": false,
  "in_burst": false,
  "consecutive_failures": 0,
  "total_sink_failures": 0,
  "degraded": false
}
