sonda-server/src/routes/snapshots/sonda_server__routes__scenarios__tests__detailed_stats_response_state_running.snap
---
source: sonda-server/src/routes/scenarios.rs
expression: resp
---
{
  "total_events": 100,
  "current_rate": 10.0,
  "target_rate": 10.0,
  "bytes_emitted": 4096,
  "errors": 0,
  "uptime_secs": "[uptime_secs]",
  "state": "running",
  "in_gap": false,
  "in_burst": false,
  "consecutive_failures": 0,
  "total_sink_failures": 0,
  "degraded": false,
  "current_state_secs": 0.0,
  "cumulative_resolution_attempts": 0
}
